--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Authentication Management Component for secure user authenticatio
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
 license = "MIT"
-packages = [{include = "auth_service"}]
+packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -25,6 +25,8 @@ gunicorn = "^21.2.0"
 prometheus-client = "^0.17.1"
 flask-limiter = "^3.5.0"
 pyotp = "^2.9.0"  # For multi-factor authentication
+flask-jwt-extended = "^4.7.1"
+flask-bcrypt = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -65,4 +67,4 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
 python_classes = "Test*"
-addopts = "--cov=auth_service --cov-report=term-missing"
+addopts = "--cov=app --cov-report=term-missing"
