--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ flask-limiter = "^3.5.0"
 pyotp = "^2.9.0"  # For multi-factor authentication
 flask-jwt-extended = "^4.7.1"
 flask-bcrypt = "^1.0.1"
+python-json-logger = "^2.0.7"  # For structured JSON logging
+logstash-async = "^2.5.0"  # For ELK Stack integration
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
